--- a/joebvp/mainvpwindow.ui
+++ b/joebvp/mainvpwindow.ui
@@ -209,6 +209,29 @@
         <string>Write out parameters</string>
        </property>
       </widget>
+      <widget class="QPushButton" name="addLineButton">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>434</y>
+         <width>31</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>+</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="sideMplWindow" native="true">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>569</y>
+         <width>421</width>
+         <height>201</height>
+        </rect>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
