--- a/joebvp/mainvpwindow.ui
+++ b/joebvp/mainvpwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1300</width>
-    <height>800</height>
+    <width>1500</width>
+    <height>1000</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>600</width>
-    <height>800</height>
+    <width>1200</width>
+    <height>1000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -52,6 +52,11 @@
         <width>1050</width>
         <height>16777215</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <layout class="QVBoxLayout" name="mplvl">
        <property name="leftMargin">
@@ -228,11 +233,23 @@
       <widget class="QWidget" name="sideMplWindow" native="true">
        <property name="geometry">
         <rect>
-         <x>10</x>
+         <x>1</x>
          <y>569</y>
-         <width>421</width>
-         <height>201</height>
+         <width>445</width>
+         <height>240</height>
         </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>435</width>
+         <height>225</height>
+        </size>
        </property>
       </widget>
       <widget class="QPushButton" name="writeModelButton">
@@ -311,7 +328,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1300</width>
+     <width>1500</width>
      <height>22</height>
     </rect>
    </property>
